# scope-exit

./: .clang-format  .gitignore  AGENTS.md  CLAUDE.md  CMakeLists.txt  CMakePresets.json  CRUSH.md  README.md
.devcontainer/: Dockerfile  devcontainer.json
cmake/: deps-test.cmake  install.cmake  scope_exitConfig.cmake.in  target_options.cmake  toolchain-gcc.cmake
include/scope_exit/: scope_exit.hpp
include/scope_exit/detail/: version.hpp.in
test/: CMakeLists.txt  scope_exit.t.cpp
